# armv4vm

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.conan  INFO.txt  README.md  class_dia.txt  conanfile.py  config.h.in  decode.txt  info.txt  memoryhandler.cpp  memoryhandler.h  rename.sh  test.S  test.cpp  toolchain.txt  tu_memoryprotect.cpp  vm.cpp  vm.h
crosstool-ng/: config
include/: armv4vm.h  memoryhandler.h
src/: alu.hpp  alu.tpp  armv4vm.cpp  armv4vm.h  armv4vm.hpp  armv4vm.tpp  armv4vm_p.hpp  assertcopro.cpp  coprocessor.hpp  float_test1.S  float_test1.cpp  memoryhandler.h  memoryhandler.hpp  nullcopro.hpp  properties.hpp  tu_memoryprotect.cpp  vfpv2.cpp  vfpv2.h  vfpv2.hpp  vm.cpp  vm.hpp  vmproperties.hpp
src/test/: main.cpp  test.cpp  testalu.hpp  testaluinstructionprotected.hpp  testaluinstructionraw.hpp  testaluprogramprotected.hpp  testaluprogramraw.hpp  testmem.hpp  testvfp.hpp  testvfpinstructionprotected.hpp  testvfpinstructionraw.hpp
src/test_compile/: Makefile  armv4vm.ld  bitt.cpp  float.cpp  game.ld  hello.cpp  modulo.cpp  primen.cpp  printf.cpp  startup.s  syscalls.cpp
src/test_package/: CMakeUserPresets.json
src/test_package/src/: example.cpp
test/: test.cpp
test_compile/: Makefile  armv4vm.ld  bench.cpp  bits.s  float.cpp  main.cpp  mainHello.cpp  mainPrimeN.cpp  primen.cpp  printf.cpp  startup.s  syscalls.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
toolchain/: crosstool-ng-configTemplate
